--- a/ch11/ch11.ipynb
+++ b/ch11/ch11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 十分钟上强化学习第十一讲：DDPG方法"
+    "# 十分钟强化学习第十一讲：DDPG方法"
    ]
   },
   {
