update ch11 and sb3

--- a/ch11/ch11.ipynb
+++ b/ch11/ch11.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.9681226, -0.2504767,  0.2744272], dtype=float32), {})"
+       "(array([-0.01685185, -0.999858  ,  0.55068326], dtype=float32), {})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,20 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.9689121 , -0.24740502, -0.06343031], dtype=float32),\n",
-       " -8.351501375170729,\n",
+       "(array([-0.03430643, -0.99941134, -0.3492102 ], dtype=float32),\n",
+       " -2.5519544811313466,\n",
        " False,\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(env, max_game=5000,  max_step=100, evl_step = 100):\n",
+    "def train(env, max_game=1000,  max_step=200, evl_step = 100):\n",
     "    agent = Agent(state_space = 3, action_space = 1)\n",
     "    scores = []\n",
     "\n",
@@ -296,7 +296,7 @@
     "\n",
     "        for t in range(max_step):\n",
     "            state_old = state_new\n",
-    "            action = agent.get_action(state_old, agent.n_game)\n",
+    "            action = agent.get_action(state_old)\n",
     "            state_new, reward, done, _, _ = env.step(action)\n",
     "            agent.remember(state_old, action, reward, state_new, done)\n",
     "            agent.train_long_memory(batch_size=256)\n",
@@ -315,9 +315,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running episode  100, avg reward -499.67. \n",
+      "Running episode  200, avg reward -176.77. \n",
+      "Running episode  300, avg reward -166.13. \n",
+      "Running episode  400, avg reward -172.31. \n",
+      "Running episode  500, avg reward -180.20. \n",
+      "Running episode  600, avg reward -179.80. \n",
+      "Running episode  700, avg reward -173.97. \n",
+      "Running episode  800, avg reward -185.10. \n",
+      "Running episode  900, avg reward -170.61. \n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.make(\"Pendulum-v1\")\n",
     "train(env) "
