--- a/ch11/sb3.ipynb
+++ b/ch11/sb3.ipynb
@@ -1632,8 +1632,288 @@
       "|    critic_loss     | 0.17     |\n",
       "|    learning_rate   | 0.001    |\n",
       "|    n_updates       | 85499    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -157     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 432      |\n",
+      "|    fps             | 52       |\n",
+      "|    time_elapsed    | 1646     |\n",
+      "|    total_timesteps | 86400    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 8.63     |\n",
+      "|    critic_loss     | 0.684    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 86299    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -158     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 436      |\n",
+      "|    fps             | 52       |\n",
+      "|    time_elapsed    | 1658     |\n",
+      "|    total_timesteps | 87200    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 7.78     |\n",
+      "|    critic_loss     | 0.2      |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 87099    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -157     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 440      |\n",
+      "|    fps             | 52       |\n",
+      "|    time_elapsed    | 1669     |\n",
+      "|    total_timesteps | 88000    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 10.8     |\n",
+      "|    critic_loss     | 0.54     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 87899    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -156     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 444      |\n",
+      "|    fps             | 52       |\n",
+      "|    time_elapsed    | 1680     |\n",
+      "|    total_timesteps | 88800    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 12       |\n",
+      "|    critic_loss     | 0.346    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 88699    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -155     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 448      |\n",
+      "|    fps             | 52       |\n",
+      "|    time_elapsed    | 1691     |\n",
+      "|    total_timesteps | 89600    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 11.3     |\n",
+      "|    critic_loss     | 0.205    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 89499    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -154     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 452      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1702     |\n",
+      "|    total_timesteps | 90400    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 7.94     |\n",
+      "|    critic_loss     | 0.0763   |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 90299    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -150     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 456      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1713     |\n",
+      "|    total_timesteps | 91200    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 15.2     |\n",
+      "|    critic_loss     | 0.46     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 91099    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -150     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 460      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1724     |\n",
+      "|    total_timesteps | 92000    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 17.8     |\n",
+      "|    critic_loss     | 0.227    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 91899    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -148     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 464      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1735     |\n",
+      "|    total_timesteps | 92800    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 20       |\n",
+      "|    critic_loss     | 0.66     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 92699    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -151     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 468      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1746     |\n",
+      "|    total_timesteps | 93600    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 15.3     |\n",
+      "|    critic_loss     | 1.4      |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 93499    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -153     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 472      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1757     |\n",
+      "|    total_timesteps | 94400    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 15.6     |\n",
+      "|    critic_loss     | 0.386    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 94299    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -151     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 476      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1768     |\n",
+      "|    total_timesteps | 95200    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 12.5     |\n",
+      "|    critic_loss     | 0.188    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 95099    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -149     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 480      |\n",
+      "|    fps             | 53       |\n",
+      "|    time_elapsed    | 1779     |\n",
+      "|    total_timesteps | 96000    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 10       |\n",
+      "|    critic_loss     | 1.4      |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 95899    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -150     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 484      |\n",
+      "|    fps             | 54       |\n",
+      "|    time_elapsed    | 1790     |\n",
+      "|    total_timesteps | 96800    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 18.2     |\n",
+      "|    critic_loss     | 1.06     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 96699    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -151     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 488      |\n",
+      "|    fps             | 54       |\n",
+      "|    time_elapsed    | 1801     |\n",
+      "|    total_timesteps | 97600    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 14.2     |\n",
+      "|    critic_loss     | 0.288    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 97499    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -151     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 492      |\n",
+      "|    fps             | 54       |\n",
+      "|    time_elapsed    | 1812     |\n",
+      "|    total_timesteps | 98400    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 14       |\n",
+      "|    critic_loss     | 0.926    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 98299    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -149     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 496      |\n",
+      "|    fps             | 54       |\n",
+      "|    time_elapsed    | 1823     |\n",
+      "|    total_timesteps | 99200    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 10.1     |\n",
+      "|    critic_loss     | 0.386    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 99099    |\n",
+      "---------------------------------\n",
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 200      |\n",
+      "|    ep_rew_mean     | -151     |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 500      |\n",
+      "|    fps             | 54       |\n",
+      "|    time_elapsed    | 1834     |\n",
+      "|    total_timesteps | 100000   |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | 13.2     |\n",
+      "|    critic_loss     | 0.392    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 99899    |\n",
       "---------------------------------\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<stable_baselines3.ddpg.ddpg.DDPG at 0x2e2b188e890>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
